    * Added accessors Document.setVisibleInMenusForUnauthorizedUsers(boolean visibleInMenusForUnauthorizedUsers)
      and Document.isVisibleInMenusForUnauthorizedUsers() (Bug 2351)
    * Added accessor Document.setCreator(User creator) (Bug 2388)
    * Added method Document.getDocumentPermissionSetForUser() (Bug 2153)

= Of interest to developers:

    * Removed user-"categories". (Bug 2149)
    * Refactored the code for creating and editing documents. (Bug 2039)


Version 1.9.3:

    * Only show links to documents which the user has at least read permission on,
      or which are visible to non-authorized users. (Bug 2387)


Version 1.9.2:

    * Fixed exception when adding documents to a menu sorted by "manual" order. (Bug 2390)
    * Remove documents from the index when deleted. (Bug 2365)


Version 1.9.1:

    * Made the indexing a little more robust. (Bugs 2354, 2361, 2362)


Version 1.9.0:

= Of interest to users:

    * Simple/advanced view toggle for docinfo.
    * Admin-pages will now work on non-javascript-enabled browsers.
    * All admin-pages now use the new blue/white look.
    * The link checker will now also check linked images and urls in text-fields.
    * "Administer conferences" functionality moved to "List new/updated pages".
    * The session counter now counts sessions, not logins.
      This means that each visitor is only counted once per browser session,
      instead of once when entering the site and then again when logging in.

= Of interest to template creators:

    * New template tag: <?imcms:contextpath?> will be replaced by the "context path" of the webapp.
      The context path is the root path to the webapp, usually the name of the webapp preceded by a slash,
      for example "/imcms". This is useful when one wants to construct an absolute URL.
      Example: <img src="<?imcms:contextpath?>/images/imCMSpower.gif" alt="Powered by imCMS">

= Of interest to administrators:
