@@ -15,13 +15,12 @@
             try{
                 CategoryType newCategoryType = documentService.createNewCategoryType( categoryTypeName, 1 );
                 Category newCategory = documentService.createNewCategory( "API-sample category", "A description", "", newCategoryType );%>
-                A new Cateogry group <%= newCategory.getName() %> was created, including one category with name <%= newCategory.getName() %><%
+                A new Category type "<%= newCategoryType.getName() %>" was created, including one category with name "<%= newCategory.getName() %>"<%
             } catch( CategoryAlreadyExistsException ex ) {
                 %>A category type with that name already exists.<%
             } catch( CategoryTypeAlreadyExistsException ex ) {
                 %>A category with that name already exists within the category type name "<%=categoryTypeName %>". <%
             }
         %>
-
     </body>
 </html>
