@@ -1,9 +1,9 @@
 <%@ page import="com.imcode.imcms.api.*" errorPage="error.jsp" %>
 
 <%!
-    int DOCUMENT_ID = 1001;
-    int MENU_INDEX_IN_DOCUMENT = 1;
-    int DOCUMENT_TO_BE_ADDED_ID = 1002;
+    int documentId = 1001;
+    int menuIndex = 1;
+    int documentToBeAddedId = 1002;
 %>
 
 <html>
@@ -11,20 +11,21 @@
 <%
     ContentManagementSystem imcmsSystem = (ContentManagementSystem)request.getAttribute(RequestConstants.SYSTEM);
     DocumentService documentService = imcmsSystem.getDocumentService() ;
-    TextDocument document = documentService.getTextDocument(DOCUMENT_ID) ;
+    TextDocument document = documentService.getTextDocument(documentId) ;
 
-    TextDocument.Menu menu = document.getMenu(MENU_INDEX_IN_DOCUMENT) ;
+    TextDocument.Menu menu = document.getMenu(menuIndex) ;
 
-    Document documentToBeAdded = documentService.getDocument(DOCUMENT_TO_BE_ADDED_ID) ;
+    Document documentToBeAdded = documentService.getDocument(documentToBeAddedId) ;
     if( null != documentToBeAdded ) {
         try {
             menu.addDocument(documentToBeAdded) ;
-            %>Done. See <a href="../servlet/GetDoc?meta_id=<%= DOCUMENT_ID %>">document <%= DOCUMENT_ID %></a>.<%
+            documentService.saveChanges( document );
+            %>Done. See <a href="document_get_menu.jsp">document_get_menu.jsp</a>.<%
         } catch (DocumentAlreadyInMenuException daim) {
-            %>Menu <%= MENU_INDEX_IN_DOCUMENT %> on document <%= DOCUMENT_ID %> already contains document <%= DOCUMENT_TO_BE_ADDED_ID %>.<%
+            %>Menu <%= menuIndex %> on document <%= documentId %> already contains document <%= documentToBeAddedId %>.<%
         }
     } else { %>
-        No document with id <%= DOCUMENT_TO_BE_ADDED_ID %> exists. Please add a document before running this page again.
+        No document with id <%= documentToBeAddedId %> exists. Please add a document before running this page again.
   <%}
 %>
 </body>
