@@ -6,24 +6,33 @@
     DocumentService documentService = imcmsSystem.getDocumentService() ;
 
     int parentId = 1001;
-    int parentMenuNumber = 1;
-    TextDocument textDocument = documentService.createNewTextDocument( parentId, parentMenuNumber ) ;
-    textDocument.setHeadline( "Test headline" );
+    int menuIndex = 1;
+    TextDocument parentDocument = documentService.getTextDocument( parentId );
+
+    TextDocument textDocument = documentService.createAndSaveNewTextDocument( parentDocument ) ;
+    textDocument.setHeadline( "Textdocument created from API" );
     textDocument.setPlainTextField( 1, "Test text field" );
     textDocument.setPublicationStartDatetime( new Date() );
     textDocument.setStatus(Document.STATUS_PUBLICATION_APPROVED);
+    documentService.saveChanges( textDocument );
 
-    documentService.saveChanges(textDocument);
+    parentDocument.getMenu( menuIndex ).addDocument( textDocument );
+    documentService.saveChanges( parentDocument );
 %>
-Created a text document with id "<a href="../servlet/GetDoc?meta_id=<%= textDocument.getId() %>"><%= textDocument.getId() %></a>"
-with link from the document with id "<a href="../servlet/GetDoc?meta_id=<%= parentId %>"><%= parentId %></a>".<br>
+Created a text document with id "<a href="<%= request.getContextPath() %>/servlet/GetDoc?meta_id=<%= textDocument.getId() %>"><%= textDocument.getId() %></a>"
+with link from the document with id "<a href="<%= request.getContextPath() %>/servlet/GetDoc?meta_id=<%= parentId %>"><%= parentId %></a>".<br>
 
 <%
-    UrlDocument urlDocument = documentService.createNewUrlDocument( parentId, parentMenuNumber );
-    urlDocument.setUrl( "www.imcode.com");
+    UrlDocument urlDocument = documentService.createAndSaveNewUrlDocument( parentDocument );
+    urlDocument.setHeadline( "URL-document created from API" );
+    urlDocument.setUrl( "www.imcode.com" );
+    urlDocument.setPublicationStartDatetime( new Date() );
+    urlDocument.setStatus(Document.STATUS_PUBLICATION_APPROVED);
     documentService.saveChanges( urlDocument );
+
+    parentDocument.getMenu( menuIndex ).addDocument( urlDocument );
+    documentService.saveChanges( parentDocument );
 %>
 
-Created an url document with id "<a href="../servlet/GetDoc?meta_id=<%= urlDocument.getId() %>"><%= urlDocument.getId() %></a>"
-with link from the document with id "<a href="../servlet/GetDoc?meta_id=<%= parentId %>"><%= parentId %></a>".<br>
-
+Created an url document with id "<a href="<%= request.getContextPath() %>/servlet/GetDoc?meta_id=<%= urlDocument.getId() %>"><%= urlDocument.getId() %></a>"
+with link from the document with id "<a href="<%= request.getContextPath() %>/servlet/GetDoc?meta_id=<%= parentId %>"><%= parentId %></a>".<br>
