@@ -1,26 +1,26 @@
 <%@ page import="com.imcode.imcms.api.*" errorPage="error.jsp" %>
 
 <%!
-    private String makeLink(Document document) throws NoPermissionException {
-        return "<a href=\"../servlet/GetDoc?meta_id="+ document.getId() +"\">document "+ document.getId() + "</a> with headline <b>"+document.getHeadline()+"</b>" ;
+    private String makeLink(Document document,HttpServletRequest request) throws NoPermissionException {
+        return "<a href=\""+request.getContextPath()+"/servlet/GetDoc?meta_id="+ document.getId() +"\">document "+ document.getId() + "</a> with headline <b>"+document.getHeadline()+"</b>" ;
     }
 
-    public String getTreeOutput( int treeLevel, int startIndex, TextDocument.MenuItem[] menuItems ) throws NoPermissionException {
+    private String getTreeOutput( int treeLevel, int startIndex, TextDocument.MenuItem[] menuItems, HttpServletRequest request ) throws NoPermissionException {
         StringBuffer result = new StringBuffer();
         int index = startIndex;
         if( "".equals( menuItems[index].getTreeKey().toString()) ){
             result.append("Warning, tree key (at index " + index + ") has no value, stepping to next.<br>");
             if ( index+1 < menuItems.length  ){
-                result.append(getTreeOutput( treeLevel, index+1, menuItems));
+                result.append(getTreeOutput( treeLevel, index+1, menuItems, request ));
             }
         } else {
             result.append( "<ul>\n" ); // Beginning of each branch
             while( existMoreKeysInBranch( treeLevel, index, menuItems ) ){
                 if( treeLevel == menuItems[index].getTreeKey().getLevelCount() ) {
-                    result.append( "<li>"+ menuItems[index].getTreeKey() + ", " + makeLink(menuItems[index].getDocument()) + "</li>\n" ); // Node output
+                    result.append( "<li>"+ menuItems[index].getTreeKey() + ", " + makeLink(menuItems[index].getDocument(),request) + "</li>\n" ); // Node output
                     index++;
                 } else { /* sublevel */
-                    String subLevelResult = getTreeOutput( treeLevel + 1, index, menuItems );
+                    String subLevelResult = getTreeOutput( treeLevel + 1, index, menuItems, request );
                     result.append( subLevelResult );
                     index += numberOfUsedIndexInSubLevelTree( treeLevel + 1, index, menuItems );
                 }
@@ -63,7 +63,7 @@ The documents in menu number <%= menuIndex %> on <%= documentId %> is:<br>
     if (documents.length > 0) {
         for ( int i = 0; i < documents.length; i++ ) {
             Document linkedDocument = documents[i];
-            %><%=makeLink( linkedDocument )%><br><%
+            %><%=makeLink( linkedDocument, request )%><br><%
         }
     } else {
         %>there are no documents in menu <%= menuIndex %> on <%= documentId %>.<%
@@ -89,7 +89,7 @@ When the (tree) keys is used to order the document in a tree structure:<br>
     int treeStartLevel = 1;
     int startIndex = 0;
     if( menuItems.length > 0 ) {
-        treeStr = getTreeOutput( treeStartLevel, startIndex, menuItems );
+        treeStr = getTreeOutput( treeStartLevel, startIndex, menuItems, request );
     }
 %>
 <%=treeStr%>
