@@ -11,23 +11,11 @@
 In document <%=documentId%> the permission set "<%=restrictedOne.getType()%>" has the following rights:
 <ul>
   <li>Edit document information: <%=restrictedOne.getEditDocumentInformationPermission()%></li>
-  <li>Edit headline: <%=restrictedOne.getEditHeadlinePermission()%></li>
   <li>Edit includes: <%=restrictedOne.getEditIncludesPermission()%></li>
   <li>Edit permissions: <%=restrictedOne.getEditRolePermissionsPermission()%></li>
   <li>Edit pictures: <%=restrictedOne.getEditPicturesPermission()%></li>
   <li>Edit texts: <%=restrictedOne.getEditTextsPermission()%></li>
 </ul>
-<br>
- <%
-        if( null != restrictedOne.getEditableMenuDocumentTypeNames() ){ %>
-            "<%=restrictedOne.getType()%>" allows to edit menus, the following menus are allowed to change:
-            <ul><%
-            String[] menuNames = restrictedOne.getEditableMenuDocumentTypeNames();
-            for( int i = 0; i < menuNames.length ; i++ ) {%>
-                <li><%=menuNames[i].toString()%></li><%
-            }%>
-            </ul> <%
-        }%>
 <br>
         <%
         if( null != restrictedOne.getEditableTemplateGroupNames() ){ %>
@@ -40,9 +28,3 @@ In document <%=documentId%> the permission set "<%=restrictedOne.getType()%>" ha
             </ul> <%
         }
 %>
-
-
-
-
-
-
